@startuml
skinparam classAttributeIconSize 0
hide circle

note "Private methods are omitted.\nexecute() parameters omitted for brevity." as N1

abstract class "{abstract}\nCommand" as Command {
    {abstract} +execute()
}

enum RecordType <<enumeration>> {
    EXPENSE
    LOAN
    SAVING
    ALL
}

class AddCommand {
    {static} #COMMAND_ADD: String
    -amount: BigDecimal
    -issueDate: LocalDate
    -description: String
    -borrowerName: String
    -recordType: RecordType
    +AddCommand(:ArrayList<String>)
    +execute()
}

class CreditScoreCommand {
    {static} #COMMAND_CREDIT_SCORE: String
    -borrowerName: String
    +CreditScoreCommand(:ArrayList<String>)
    +execute()
}

class ExitCommand {
    {static} #COMMAND_EXIT: String
    +ExitCommand(:ArrayList<String>)
    +execute()
}

class HelpCommand {
    {static} #COMMAND_HELP: String
    -helpType: String
    +HelpCommand(:ArrayList<String>)
    +execute()
}

skinparam linetype polyline
skinparam groupInheritance 3

Command <|-- AddCommand
Command <|-- CreditScoreCommand
Command <|-- ExitCommand
Command <|-- HelpCommand

hide RecordType empty members

@enduml